# CQA

./: .gitignore  README.md  pyproject.toml  requirements.txt  yakeExample.py
src/cqa/: cqa.py
