[build-system]
requires = ["hatchling", "yake", "sentence_transformers", "sklearn"]
build-backend = "hatchling.build"
[project]
name = "cqa"
version = "0.0.1"
authors = [
  { name="Manal Alshammari", email="mfalshammari@stu.kau.edu.sa" },
]
description = "Curriculum Quality Assurance Model"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]